[Chromium] Unicode combining diacritical aren't always combined on Linux https://bugs.webkit.org/show_bug.cgi?id=101009

Reviewed by Kent Tamura.

Source/WebCore:

Add a space character to harfbuzzBuffer as pre-context. This will prevent
harfbuzz from inserting dotted-circle.

Test: fast/text/international/combining-marks-position.html

* platform/graphics/harfbuzz/ng/HarfBuzzShaper.cpp:
(WebCore::HarfBuzzShaper::shapeHarfBuzzRuns):

LayoutTests:

Add a test that checks whether combining marks are combined with base characters.

* fast/text/international/combining-marks-position-expected.txt: Added.
* fast/text/international/combining-marks-position.html: Added.


Canonical link: https://commits.webkit.org/119368@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@133550 268f45cc-cd09-0410-ab3c-d52691b4dbfc